@@ -83,6 +83,7 @@ namespace utp
 	protected:
 		virtual void handlePacket(const QByteArray & packet,const net::Address & addr);
 		virtual void timerEvent(QTimerEvent* event);
+		virtual void customEvent(QEvent* event);
 		
 	signals:
 		void handlePendingConnectionsDelayed();
